helm_chart/loadgen.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["/bin/sh", "-c"]
    args:
    - "while true; do wget -q -O- http://frontend-myapp.dev.svc.cluster.local; done"
